# napari-sdeconv

./: .buildinfo  LICENSE  README.md  about.html  genindex.html  guide.html  help.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.md  config.yml
_sources/: guide.rst.txt  index.rst.txt
docs/: about.rst  conf.py  help.rst  index.rst
napari_sdeconv/: _dock_widget.py  _spitfire_plugins.py  _spitfire_workers.py  _splugin.py  _spsf_plugins.py  _spsf_workers.py  _srl_plugins.py  _srl_workers.py  _swiener_plugins.py  _swiener_workers.py
napari_sdeconv/_tests/: test_dock_widget.py
src/napari_sdeconv/: __init__.py  _dict_widget.py  _dict_worker.py  _framework.py  _sample_data.py  _sdeconv_widget.py  _spsf_widget.py  napari.yaml
src/napari_sdeconv/_tests/: test_sample_data.py  test_widget.py
