[metadata]
name = napari-sdeconv
version = 0.0.1
author = Sylvain Prigent
author_email = meriadec.prigent@gmail.com
url = https://github.com/sylvainprigent/napari-sdeconv
license = GPL-3.0-only
description = 2D and 3D image deconvolution
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/sylvainprigent/napari-sdeconv/issues
    Documentation = https://github.com/sylvainprigent/napari-sdeconv#README.md
    Source Code = https://github.com/sylvainprigent/napari-sdeconv
    User Support = https://github.com/sylvainprigent/napari-sdeconv/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-sdeconv = napari_sdeconv
