[metadata]
name = napari-sdeconv
version = 1.0.0
description = 2D and 3D deconvolution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sylvainprigent/napari-sdeconv
author = Sylvain Prigent
author_email = meriadec.prigent@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/sylvainprigent/napari-sdeconv/issues
    Documentation = https://github.com/sylvainprigent/napari-sdeconv#README.md
    Source Code = https://github.com/sylvainprigent/napari-sdeconv
    User Support = https://github.com/sylvainprigent/napari-sdeconv/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    sdeconv>=1.0.0

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-sdeconv = napari_sdeconv:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
    sdeconv


[options.package_data]
* = *.yaml
